# internal/api/v0/dto/step_progress.go
@@ -13,6 +13,7 @@ type StepProgressDTO struct {
 	Title  string  `json:"title" yaml:"title"`
 	Type   string  `json:"type" yaml:"type"`
 	Error  *string `json:"error,omitempty" yaml:"error,omitempty"`
+	Note   *string `json:"note,omitempty" yaml:"note,omitempty"`
 }
 
 func StepProgressDTOFrom(sp domainRuntime.StepProgress) StepProgressDTO {
@@ -23,6 +24,7 @@ func StepProgressDTOFrom(sp domainRuntime.StepProgress) StepProgressDTO {
 		Title:  title,
 		Type:   stepType,
 		Error:  sp.Error,
+		Note:   sp.Note,
 	}
 }
 
